--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,7 +13,7 @@
   <div class="main-content">
 
     {{>header}}
-    <img class="portrait" src="/img/outside.jpg" />
+    <img class="portrait" src="/img/light.jpeg" />
   </div>
   {{>footer}}
 </body>
