--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,6 +13,7 @@
   <div class="main-content">
 
     {{>header}}
+    <p>This site created by Van. It used data from data from openweathermap.com</p>
     <img class="portrait" src="/img/light.jpeg" />
   </div>
   {{>footer}}
